2011-04-26 20:24-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/GormTextFieldAttributesInspector.m: Fix issue
	with refreshing display of enter/end editing when selecting fields.

2011-04-01 03:04-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/GormNSTextFieldInspector.gorm: Add matrix 
	for enter/end editing.
	* Palettes/2Controls/GormTextFieldAttributesInspector.h: Added 
	ivar to point to new matrix
	* Palettes/2Controls/GormTextFieldAttributesInspector.m: Implement 
	changes to handle "Send Action On Enter/End editing" per task #10799.
	Added code to ok: method to handle new matrix.

2011-04-01 03:04-EDT Gregory John Casamento <greg.casamento@gmail.com>
	
	* GormInfo.plist: Bump version.
	* Version: Bump version for SVN version.

2011-01-04  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GormCore/GormMatrixEditor.m (-connectTargetAtPoint:,
	-draggingEntered:, -performDragOperation:): Make connections to
	the whole matrix possible again for matrixes with small intercell
	spacing.

2011-01-04  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GormCore/GormDocument.m (-windowAndRect:forObject:):
	* GormCore/GormMatrixEditor.m (-draggingEntered:,
	-performDragOperation:): Allow making connections to individual
	cells of a matrix.

	* GormCore/GormMatrixEditor.m (-validateFrame:...):
	Attach added cells and detach removed cells when changing the
	number of rows or columns in a matrix.

2010-12-05 19:10-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/4Data/GormImageViewAttributesInspector.m: Archive
	by name.

2010-12-05 18:12-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/4Data/GormImageViewAttributesInspector.m: Remove check for
	name so that images which currently do not reference a known image
	can be saved by name.
	* Palettes/4Data/GormNSImageViewInspector.gorm: Add connection
	to ok: from the text field.

2010-11-01 Riccardo Mottola

	* Plugins/Xib/GormXibWrapperLoader.m